# pychat

./: .gitignore  LICENSE  README.md  compose.yml  nginx.conf
backend/: application.py  backend.Dockerfile  config.py  gunicorn.config.py  pyproject.toml  run_test.py  websockets.py
backend/app/: __init__.py  errors.py  tasks.py
backend/app/api/: __init__.py  conversations.py  health.py  relationships.py  search.py  users.py
backend/app/models/: __init__.py  conversation.py  message.py  relationship.py  ts_vector.py  user.py
backend/app/serde/: __init__.py  basic_schema.py  user.py  utils.py
backend/app/templates/: change_email.html  change_email.txt  confirm_email.html  confirm_email.txt  reset_password.html  reset_password.txt
backend/app/test_data/: accounts.txt  conversations.txt
backend/app/utils/: __init__.py  email.py
backend/migrations/: env.py
backend/migrations/versions/: 0cde3f20ba6a_add_deleted_by_to_message.py  6441f6a4ee7c_cascade_delete_messages.py  98ce5a07b0e0_index_messages_creation_time.py  b61d57e7155a_set_user_id_to_null_in_conversation_and_.py  e31c353b90de_cascade_delete_relationships.py  f07c46e346be_change_message_read_to_datetime_from_.py
backend/tests/: conftest.py
backend/tests/e2e/: test_health.py  test_users.py
backend/tests/unit/: test_basics.py  test_user_model.py
backend/tests/unit/serde/: test_schema.py  test_user_schema.py  test_validators.py
frontend/: .eslintrc.js  frontend.Dockerfile  package.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/public/: manifest.json
frontend/src/: App.tsx  declarations.d.ts  index.html  index.tsx  theme.ts
frontend/src/api/: conversations.ts  index.ts  relationships.ts  search.ts  users.ts
frontend/src/contexts/: applictionContext.tsx  userContext.tsx
frontend/src/hooks/: index.ts  useKeepScreenPosition.ts  useMessages.ts  useOnScreen.ts  useWebsockets.ts
frontend/src/navigation/: RequireAuth.tsx  RouterConfig.tsx
platform/: app.py  gunicorn.config.py  logConfig.json  pyproject.toml
platform/src/: __init__.py  config.py
platform/src/routes/: __init__.py  health.py
platform/src/utils/: __init__.py
(+39 files in other folders)
